welcome.lessons.welcome.loopwhile.BaggleSeeker.scala.error
BaggleSeeker:3: error: ';' expected but 'else' found.
else avance() 
^