welcome.lessons.welcome.loopwhile.BaggleSeeker.scala.code
while (estSurBiscuit() == false)
prendBiscuit()
else avance()